--- a/templates/user_info.jinja
+++ b/templates/user_info.jinja
@@ -25,6 +25,7 @@
 
 
 <form method="POST" , action="/logout">
+  {% include '/_form.jinja' %}
   <button type="submit"> Log Out </button>
 </form>
 
